--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 ">
         <div class="div2" style="
     height: 80%;
-    min-width: 350px;
+    min-width: 550px;
     width: 100%;
     max-width: 500px;
     padding: 60px 50px;
@@ -54,19 +54,19 @@
     width: 100%;
 ">
                         <p>Name</p>
-                        <input type="text" name="username" placeholder="Enter your username">
+                        <input type="text" name="username" placeholder="Enter your name">
                         <p>Phone Number</p>
-                        <input type="email" name="email" placeholder="Enter your email-Id">
-                        <p>Registration Number</p>
                         <input type="tel" name="phone" placeholder="Enter your Phone No.">
+                        <p>Registration Number</p>
+                        <input type="email" name="email" placeholder="Enter your registration number">
                         <p>Date Of Birth</p>
-                        <input type="email" name="email" placeholder="Enter your email-Id">
+                        <input type="email" name="email" placeholder="Enter your DOB">
                         <p>Email</p>
                         <input type="email" name="email" placeholder="Enter your email-Id">
                         <p>Branch</p>
-                        <input type="tel" name="phone" placeholder="Enter your Phone No.">
+                        <input type="tel" name="phone" placeholder="Enter your branch">
                         <p>Social Links</p>
-                        <input type="tel" name="phone" placeholder="Enter your Phone No.">
+                        <input type="tel" name="phone" placeholder="Enter your social links">
                     </form>
                 </div>
                 <div class="div6_index" style="
