--- a/index.html
+++ b/index.html
@@ -53,13 +53,20 @@
                     <form style="
     width: 100%;
 ">
-                        <p>Username</p>
-                        <input type="text" name="username" placeholder="Enter your username" style="
-">
+                        <p>Name</p>
+                        <input type="text" name="username" placeholder="Enter your name">
+                        <p>Phone Number</p>
+                        <input type="tel" name="phone" placeholder="Enter your Phone No.">
+                        <p>Registration Number</p>
+                        <input type="email" name="email" placeholder="Enter your registration number">
+                        <p>Date Of Birth</p>
+                        <input type="email" name="email" placeholder="Enter your DOB">
                         <p>Email</p>
                         <input type="email" name="email" placeholder="Enter your email-Id">
-                        <p>Phone No.</p>
-                        <input type="tel" name="phone" placeholder="Enter your Phone No.">
+                        <p>Branch</p>
+                        <input type="tel" name="phone" placeholder="Enter your branch">
+                        <p>Social Links</p>
+                        <input type="tel" name="phone" placeholder="Enter your social links">
                     </form>
                 </div>
                 <div class="div6_index" style="
@@ -67,20 +74,16 @@
     width: unset;
     height: unset;
 ">
-                    <button type="submit" onclick="location.href='payment.html';" style="
+                    <button type="submit" onclick="" style="
     /* width: 250px; */
     height: 3rem;
     margin: 0;
 ">
-                        C H E C K O U T
+                        R E G I S T E R
                     </button>
                 </div>
             </div>
-            <footer>
-                <div class="div_img">
-                    <img src="images/footer.svg"/>
-                </div>
-            </footer>    
+            <footer>   
             </div>        
         </div>
 
