--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>User Details</title>
 </head>
-<body>
+<body style="background-image: url(images/back.png);">
     
     <div class="div1" style="
     width: 100%;
