--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     width: unset;
     height: unset;
 ">
-                    <input class="button" type="submit" name="submit" value="R E G I S T E R" style="
+                    <input class="subbut" type="submit" name="submit" value="R E G I S T E R" style="
     /* width: 250px; */
     height: 3rem;
     margin: 0;
